Developed single add page with data

--- a/src/app/components/advertisements/advertisements-list/advertisements-list.component.html
+++ b/src/app/components/advertisements/advertisements-list/advertisements-list.component.html
@@ -21,9 +21,9 @@
             </div>
             <div class="flex align-center" style="gap: 0.2rem">
               <div class="star-ratings">
-                <div class="fill-ratings" [ngStyle]="{ width : advertisement.ratingAverage + '%'}">
+                <div class="fill-ratings" [ngStyle]="{ width : (advertisement.ratingAverage) + '%'}">
                   <span>★★★★★</span>
-                </div>
+                 </div>
                 <div class="empty-ratings">
                   <span>★★★★★</span>
                 </div>
