--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
@@ -63,7 +63,7 @@ p {
 .user-name {
   color: #2AC59B;
   font-size: 1.4rem;
-  margin-bottom: 1.8rem;
+  margin-bottom: 0.8rem;
 }
 
 .star-ratings {
@@ -110,4 +110,25 @@ p {
   padding: 0.6rem 2.4rem;
 }
 
+.white-button:hover {
+  background-color: #d3d6d9;
+}
 
+.right-panel {
+  width: 100%;
+}
+
+.content {
+  background-color: #fff;
+  padding: 1rem 1.2rem;
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: 300;
+  color: #888;
+}
+
+.author-profile-image {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+}
