Started creating messaging functionality. Currently created messages component and messages-list with routing.

--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
@@ -132,3 +132,9 @@ p {
   height: 5rem;
   border-radius: 50%;
 }
+
+.second-btn:hover {
+  background-color: #12a27f;
+  color: #fff;
+  border: solid #12a27f 2px;
+}
