--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -35,5 +35,5 @@
 <div class="register-commercial flex-col align-center justify-center">
   <h1 class="com-header">Create free account on e-tutor</h1>
   <p>Obtain access to post advertisements</p>
-  <button class="com-button">Register</button>
+  <button class="com-button" [routerLink]="['/register']">Register</button>
 </div>
