--- a/src/app/components/profile-panel/navigation/navigation.component.html
+++ b/src/app/components/profile-panel/navigation/navigation.component.html
@@ -6,7 +6,7 @@
 
     <mat-sidenav-content>
       <div class="activities-list flex-col ">
-        <div class="activity flex align-center justify-start">
+        <div class="activity flex align-center justify-start" routerLink="/profile/messages" [routerLinkActiveOptions]="{exact : true}" routerLinkActive="activity-active">
           <mat-icon> email</mat-icon>
           <p>Message</p>
         </div>
