--- a/src/app/components/profile-panel/activities/messages/messages.component.html
+++ b/src/app/components/profile-panel/activities/messages/messages.component.html
@@ -1,1 +1,12 @@
-<p>messages works!</p>
+<div class="messages-con" style="min-width: 30rem">
+  <div class="flex justify-center align-center" style="width: 100% !important;">
+    <button routerLink="/profile/messages/sent" [routerLinkActiveOptions]="{exact : true}"
+            routerLinkActive="link-active" mat-raised-button>Sent</button>
+    <button routerLink="/profile/messages/received" [routerLinkActiveOptions]="{exact : true}"
+            routerLinkActive="link-active" mat-raised-button>Received</button>
+    <button routerLink="/profile/messages/bin" [routerLinkActiveOptions]="{exact : true}"
+            routerLinkActive="link-active" mat-raised-button>Bin</button>
+  </div>
+
+  <app-messages-list ></app-messages-list>
+</div>
