--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
     <p class="alert alert-warning">No adds yet.</p>
   </div>
   <div class="adds-list-panel panel">
-    <h4>Advertisement's list</h4>
+    <h4>Your advertisements</h4>
       <div class="flex-col" style="gap: 1.8rem">
         <app-advertisement-row *ngFor="let advertisement of advertisements" [advertisement]="advertisement"></app-advertisement-row>
       </div>
