--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
@@ -1,5 +1,6 @@
 .single-advertisement-con {
   background-color: #dee2e6;
+
 }
 
 .mat-icon {
@@ -25,7 +26,7 @@ p {
 
 .info-con {
   background-color: #f8f9fa;
-  padding: 0.8rem 2.8rem;
+  padding: 0.8rem;
   width: 100%;
   gap: 0.65rem;
 }
