--- a/src/app/components/advertisements/advertisements-list/advertisements-list.component.css
+++ b/src/app/components/advertisements/advertisements-list/advertisements-list.component.css
@@ -8,6 +8,15 @@
 .main-container {
   width: 60rem;
 }
+ngb-pagination ::ng-deep ul > li:not(.active) > a {
+  background-color: #fff !important;
+  color: #333 !important;
+  border-color: #12a27f !important;
 
+}
 
+ngb-pagination ::ng-deep ul > li.active > a {
+  background-color: #12a27f !important;
+  border-color: #12a27f !important;
 
+}
