--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,11 +6,11 @@
         <p>E-Tutor</p>
       </div>
 
-      <div class="link">
+      <div class="link" (click)="onAdvertisementsForCategorySearching('tutor')">
         Tutors advertisements
       </div>
 
-      <div class="link">
+      <div class="link" (click)="onAdvertisementsForCategorySearching('student')">
         Students advertisements
       </div>
     </div>
