--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       <div class="flex-col align-center" style="gap: 0.6rem">
         <img class="user-img" [src]="currentUser?.profileImagePath ? sanitizerPhoto(currentUser?.profileImagePath)
              : 'assets/images/default_avatar.png'"/>
-        <p class="user-username">Jakub Matras</p>
+        <p class="user-username">{{ currentUser?.firstName | titlecase}}  {{ currentUser?.lastName | titlecase }}</p>
       </div>
 
       <div class="flex-col align-center">
