--- a/src/app/components/profile-panel/activities/messages/messages-list/messages-list.component.html
+++ b/src/app/components/profile-panel/activities/messages/messages-list/messages-list.component.html
@@ -2,7 +2,7 @@
   <div class="conversation-simple-view flex align-center"
        [routerLink]="['/profile', 'messages', 'chat', 'user', user?.id]"
        style="gap: 0.8rem;" *ngFor="let user of userConversations">
-    <img class="profile-image" [src]="user?.profileImagePath"/>
+    <img class="profile-image" [src]="user?.profileImagePath ? user?.profileImagePath : 'assets/images/default_avatar.png'"/>
     <p class="user-name"> {{ user?.firstName }} {{ user?.lastName }}</p>
   </div>
   <ngb-pagination
@@ -10,6 +10,6 @@
     [(page)]="pageNumber"
     [boundaryLinks]="true"
     [pageSize]="pageSize"
-    (pageChange)="fetchProductsData()"
+    (pageChange)="fetchData()"
   ></ngb-pagination>
 </div>
