--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="search-bar flex justify-center" *ngIf="shouldBeHeaderVisible">
-    <h1>Find the best lessons and offers from over 0 advertisements</h1>
+    <h1>Find the best lessons and offers from over {{ totalAdvertisementsQuantity }} advertisements</h1>
   </div>
 
   <div class="form-con" *ngIf="shouldBeSearchFormVisible">
