--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
@@ -45,7 +45,7 @@ p {
 .all-con {
   background-color: #fff;
   padding: 3.4rem 2.4rem;
-  width: 60rem;
+
   margin-bottom: 1.8rem;
 }
 
@@ -95,6 +95,8 @@ p {
 
 .add-content {
   padding: 0 1.2rem;margin-bottom: 2.8rem;
+  width: 100%;
+  word-wrap: break-word;
 }
 
 .lesson-range {
@@ -127,6 +129,8 @@ p {
   font-weight: 300;
   color: #888;
 }
+
+
 
 .author-profile-image {
   width: 5rem;
