--- a/src/app/components/advertisements/advertisement-row/advertisement-row.component.css
+++ b/src/app/components/advertisements/advertisement-row/advertisement-row.component.css
@@ -30,16 +30,16 @@
 }
 
 .add-con {
-
+  background-color: #fff;
   padding: 1.8rem;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-left: solid 5px #38d9a9;
   transition: all 0.2s linear;
   cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .add-con:hover {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   transition: all 0.2s linear;
 }
 
@@ -59,11 +59,12 @@
 }
 
 .author-name {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 300;
   color: rgb(42, 197, 155);
   margin-bottom: 1.8rem;
 }
+
 span {
   display: inline-block;
 }
@@ -96,4 +97,16 @@ span {
   margin-top: 2.4rem;
   font-size: 1.2rem;
   width: max-content;
+}
+
+.price {
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: #333;
+  margin-bottom: 1.8rem;
+}
+
+.phone-number {
+  font-size: 1rem;
+  font-weight: 300;
 }
