--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
@@ -1,6 +1,6 @@
 .single-advertisement-con {
   background-color: #dee2e6;
-
+  width: 100%;
 }
 
 .mat-icon {
@@ -142,4 +142,8 @@ p {
   background-color: #12a27f;
   color: #fff;
   border: solid #12a27f 2px;
+}
+
+ul {
+  padding-left: 1.2rem;
 }
