--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.css
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.css
@@ -31,8 +31,8 @@ h4 {
 }
 
 .panel {
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  padding: 1.2rem 2.4rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  padding: 2.4rem;
 }
 
 .user-img {
